Fix dark mode toggle

--- a/src/styles.css
+++ b/src/styles.css
@@ -12,5 +12,5 @@
 
 input:checked ~ .toggle__dot {
   transform: translateX(100%);
-  background-color: #48bb78;
+  background-color: #71eeb8;
 }
